# text-to-json

./: Cargo.toml  README.md  example.txt
src/: lib.rs  main.rs  to_json.rs
src/read/: mod.rs  text.rs  to_array.rs  to_json.rs
